test/expected/explain_main_f4i_i.out
explain int main(int, int, int, int)
                 ^
18: error: main() must have 0-3 parameters
